kubernetes/overlays/homelab/infrastructure/argocd/resources/service-ui-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-ui-lb
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: homelab
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: argocd
    homelab.local/expose: "true"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.2.130
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: argocd-server
